--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/check-withdrawal/check-summary-withdrawal/check-summary-withdrawal.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/check-withdrawal/check-summary-withdrawal/check-summary-withdrawal.component.html
@@ -3,7 +3,11 @@
 
     <h2 class="ui header">อัพโหลดรายงานสรุปรายการขอเบิก</h2>
 
-    <div class="ui segment">
+    <div class="ui top attached header">
+      <span>อัพโหลดรายงานสรุปรายการขอเบิก</span>
+    </div>
+
+    <div class="ui attached segment">
       <div class="ui form">
         <div class="inline fields">
           <div class="eight wide field ">
