add ,update content

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/check-withdrawal/check-allowance-withdrawal/check-allowance-withdrawal-display/check-allowance-withdrawal-display.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/check-withdrawal/check-allowance-withdrawal/check-allowance-withdrawal-display/check-allowance-withdrawal-display.component.html
@@ -248,15 +248,16 @@
           หมายเหตุ*
         </div>
         <div class="six wide column">
-          <img src="assets/images/triangle.JPG"> เบิกค่าตอบแทนบุคคลหรือคณะกรรมการ
-          <br>
-          <img src="assets/images/square.JPG"> ปฏิบัติงานนอกเวลา
-          <br>
-          <img src="assets/images/moon.JPG"> เดินทางไปราชการอื่น
-          <br>
-          <img src="assets/images/full-moon.JPG"> อยู่เวร
-          <br>
-          <img src="assets/images/flower.JPG">ลาป่วย/ลาพักผ่อน
+          เบิกค่าตอบแทนบุคคลหรือคณะกรรมการ
+          <img src="assets/images/triangle.JPG">
+          <br> ปฏิบัติงานนอกเวลา
+          <img src="assets/images/square.JPG">
+          <br> เดินทางไปราชการอื่น
+          <img src="assets/images/moon.JPG">
+          <br> อยู่เวร
+          <img src="assets/images/full-moon.JPG">
+          <br> ลาป่วย/ลาพักผ่อน
+          <img src="assets/images/flower.JPG">
         </div>
       </div>
     </div>
