--- a/workspace/ims-client/src/styles.css
+++ b/workspace/ims-client/src/styles.css
@@ -81,3 +81,11 @@ button.width-100 {
 img.image-width {
     width: 47% !important;
 }
+
+img.image-width-18 {
+    width: 18px !important;
+}
+
+img.image-width-16 {
+    width: 16px !important;
+}
