modify name pages

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/check-withdrawal/check-expense-withdrawal/check-expense-withdrawal.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/check-withdrawal/check-expense-withdrawal/check-expense-withdrawal.component.html
@@ -39,6 +39,15 @@
     </div>
 
     <div class="ui segment" *ngIf="showData">
+      <div class="ui grid">
+        <div class="sixteen wide right aligned column">
+          <button class="ui mini primary button">
+            <i class="print icon"></i>
+            พิมพ์
+          </button>
+        </div>
+      </div>
+      <br>
       <div style="overflow-x: scroll;">
         <table class="ui small celled table" style="width: 200%">
           <thead>
