--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/check-withdrawal/int06-5/int06-5-2/int06-5-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/check-withdrawal/int06-5/int06-5-2/int06-5-2.component.html
@@ -10,7 +10,7 @@
       <div class="step" style="width: 240px;">
         <i class="calendar icon"></i>
         <div class="content">
-          <div class="title">ปฏิทินโอที</div>
+          <div class="title">ปฏิทินเบี้ยเลี้ยง</div>
         </div>
       </div>
       <div class="active step" style="width: 240px;">
@@ -63,7 +63,7 @@
               <th style="color: red">18</th>
               <th style="color: red">19</th>
               <th>20</th>
-              <th>รวมชั่วโมง</th>
+              <th>รวมวัน</th>
               <th>รวมเงิน</th>
             </tr>
           </thead>
@@ -71,126 +71,132 @@
             <tr>
               <td style="text-align: left;">นายวรชิต วันจันทร์</td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
-                <br>
-                <span style="font-size: 11px;">16.30-20.30</span>
-              </td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
-                <br>
-                <span style="font-size: 11px;">16.30-20.30</span>
-                <br>
-                <img class="image-width-16" src="assets/images/moon.JPG">
-              </td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
-                <br>
-                <span style="font-size: 11px;">8.30-16.30</span>
+                <img class="image-width" src="assets/images/triangle.JPG">
               </td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
-                <br>
-                <span style="font-size: 11px;">8.30-16.30</span>
+                <img class="image-width" src="assets/images/triangle.JPG">
               </td>
-              <td></td>
+              <td>
+                <img class="image-width" src="assets/images/triangle.JPG">
+              </td>
+              <td>
+                <img class="image-width" src="assets/images/triangle.JPG">
+              </td>
+              <td>
+                <img class="image-width" src="assets/images/triangle.JPG">
+              </td>
+              <td>
+                <img class="image-width" src="assets/images/triangle.JPG">
+                <br>
+                <img class="image-width" src="assets/images/moon.JPG">
+              </td>
+              <td>
+                <img class="image-width" src="assets/images/triangle.JPG">
+              </td>
+              <td>
+                <img class="image-width" src="assets/images/triangle.JPG">
+              </td>
+              <td>
+                <img class="image-width" src="assets/images/triangle.JPG">
+              </td>
+              <td>
+                <img class="image-width" src="assets/images/triangle.JPG">
+              </td>
+              <td>
+                <img class="image-width" src="assets/images/squre.JPG">
+              </td>
+              <td>
+                <img class="image-width" src="assets/images/square.JPG">
+              </td>
+              <td>
+                <img class="image-width" src="assets/images/triangle.JPG">
+              </td>
+              <td>
+                <img class="image-width" src="assets/images/triangle.JPG">
+              </td>
+              <td>
+                <img class="image-width" src="assets/images/flower.JPG">
+              </td>
               <td></td>
               <td>
-                <img class="image-width-18" src="assets/images/flower.JPG">
+                <img class="image-width" src="assets/images/triangle.JPG">
+                <br>
+                <img class="image-width" src="assets/images/full-moon.JPG">
               </td>
-              <td></td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
-                <br>
-                <span style="font-size: 11px;">16.30-20.30</span>
-                <br>
-                <img class="image-width-16" src="assets/images/full-moon.JPG">
+                <img class="image-width" src="assets/images/triangle.JPG">
               </td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td style="text-align: right">26</td>
-              <td style="text-align: right">1,440</td>
+              <td>
+                <img class="image-width" src="assets/images/triangle.JPG">
+              </td>
+              <td>
+                <img class="image-width" src="assets/images/triangle.JPG">
+              </td>
+              <td style="text-align: right">5600</td>
+              <td style="text-align: right">1,680</td>
             </tr>
             <tr>
               <td style="text-align: left;">นายบี วันอังคาร</td>
               <td></td>
+              <td>
+                <img class="image-width" src="assets/images/triangle.JPG">
+              </td>
               <td></td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
-                <br>
-                <span style="font-size: 11px;">16.30-20.30</span>
+                <img class="image-width" src="assets/images/square.JPG">
               </td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
-                <br>
-                <span style="font-size: 11px;">8.30-16.30</span>
-              </td>
-              <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
-                <br>
-                <span style="font-size: 11px;">8.30-17.00</span>
+                <img class="image-width" src="assets/images/square.JPG">
               </td>
               <td></td>
               <td></td>
               <td></td>
               <td>
-                <img class="image-width-18" src="assets/images/flower.JPG">
+                <img class="image-width" src="assets/images/flower.JPG">
               </td>
               <td>
-                <img class="image-width-18" src="assets/images/flower.JPG">
+                <img class="image-width" src="assets/images/flower.JPG">
+              </td>
+              <td></td>
+              <td></td>
+              <td>
+                <img class="image-width" src="assets/images/moon.JPG">
+              </td>
+              <td></td>
+              <td>
+                <img class="image-width" src="assets/images/triangle.JPG">
               </td>
               <td></td>
               <td></td>
               <td></td>
               <td></td>
               <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td style="text-align: right">18</td>
-              <td style="text-align: right;">1,040</td>
+              <td style="text-align: right">2</td>
+              <td style="text-align: right;">600</td>
             </tr>
             <tr>
               <td style="text-align: left;">นายซี วันพุธ</td>
+              <td></td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
-                <br>
-                <span style="font-size: 11px;">16.30-20.30</span>
+                <img class="image-width" src="assets/images/triangle.JPG">
               </td>
               <td></td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
-                <br>
-                <span style="font-size: 11px;">16.30-20.30</span>
+                <img class="image-width" src="assets/images/square.JPG">
               </td>
               <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
-                <br>
-                <span style="font-size: 11px;">8.30-16.30</span>
-              </td>
-              <td>
-                <img class="image-width-16" src="assets/images/square.JPG">
-                <br>
-                <span style="font-size: 11px;">8.30-17.00</span>
+                <img class="image-width" src="assets/images/square.JPG">
               </td>
               <td></td>
-              <td></td>
+              <td>
+                <img class="image-width" src="assets/images/flower.JPG">
+              </td>
               <td></td>
               <td>
-                <img class="image-width-18" src="assets/images/full-moon.JPG">
+                <img class="image-width" src="assets/images/full-moon.JPG">
               </td>
               <td>
-                <img class="image-width-18" src="assets/images/full-moon.JPG">
+                <img class="image-width" src="assets/images/full-moon.JPG">
               </td>
               <td></td>
               <td></td>
@@ -216,8 +222,8 @@
               <td></td>
               <td></td>
               <td></td>
-              <td style="text-align: right">22</td>
-              <td style="text-align: right;">1,240</td>
+              <td style="text-align: right">3</td>
+              <td style="text-align: right;">900</td>
             </tr>
             <tr>
               <td style="text-align: left;">นายดี วันพฤหัสบดี</td>
@@ -267,8 +273,8 @@
               <td></td>
               <td></td>
               <td></td>
-              <td style="text-align: right">26</td>
-              <td style="text-align: right;">1,440</td>
+              <td style="text-align: right">5</td>
+              <td style="text-align: right;">1,750</td>
             </tr>
           </tbody>
         </table>
