--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -58,7 +58,7 @@
                         <a class="item" [routerLink]="['/check-summary-withdrawal']" routerLinkActive="active">ตรวจสรุปรายการขอเบิก</a>
                         <a class="item" [routerLink]="['/check-allowance-withdrawal']" routerLinkActive="active">ตรวจสอบการเบิกค่าเบี้ยเลี้ยง</a>
                         <a class="item" [routerLink]="['/check-overtime-com-withdrawal']" routerLinkActive="active">ตรวจสอบการเบิกค่าตอบแทนปฏิบัติงานนอกเวลาราชการ</a>
-                        <a class="item" [routerLink]="['/check-controller-com-withdrawal']" routerLinkActive="active">ตรวจสอบการเบิกค่าตอบแทนผู้ควบคุมงาน</a>
+                        <a class="item" [routerLink]="['/int06-5']" routerLinkActive="active">ตรวจสอบการเบิกค่าตอบแทนผู้ควบคุมงาน</a>
                         <a class="item" [routerLink]="['/check-personal-com-withdrawal']" routerLinkActive="active">ตรวจสอบการเบิกค่าตอบแทนบุคคลหรือคณะกรรมการ</a>
                     </div>
                 </div>
