--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/check-withdrawal/int06-5/int06-5-1/int06-5-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/check-withdrawal/int06-5/int06-5-1/int06-5-1.component.html
@@ -10,7 +10,7 @@
       <div class="active step" style="width: 240px;">
         <i class="calendar icon"></i>
         <div class="content">
-          <div class="title">ปฏิทินโอที</div>
+          <div class="title">ปฏิทินเบี้ยเลี้ยง</div>
         </div>
       </div>
       <div class="step" style="width: 240px;">
@@ -47,6 +47,17 @@
           </div>
         </div>
 
+        <div class="inline fields">
+          <div class="eight wide field ">
+            <label class="custom-label-w-25">ประเภทบุคคล</label>
+            <input class="custom-readonly" readonly="" type="text" value="บุคคลภายใน">
+          </div>
+          <div class="eight wide field ">
+            <label class="custom-label-w-25">ประเภทงาน</label>
+            <input class="custom-readonly" readonly="" type="text" value="ประธาน">
+          </div>
+        </div>
+
       </div>
 
     </div>
@@ -68,11 +79,11 @@
     <div class="ui attached segment">
       <br>
       <div class="ui center aligned grid">
-        <img src="assets/images/check-overtime-com-withdrawal-calendar.JPG" style="width: 100%;">
+        <img src="assets/images/check-controller-com-withdrawal-calendar.JPG" style="width: 100%;">
       </div>
       <div class="ui center aligned grid">
         <div class="eight wide column">
-          <button class="ui mini primary button width-100" routerLink="/check-overtime-com-withdrawal-display">
+          <button class="ui mini primary button width-100" routerLink="/int06-5-2">
             <i class="save icon"></i>
             บันทึก
           </button>
